Chnages to Style.CSS + Index HTML - fixed how the image under the border to not repeat and fill the entire width - aligned the nva bar to flex-end - Added the About me section and organized it to match the example on the homework

--- a/assets/reset.css
+++ b/assets/reset.css
@@ -1,5 +1,6 @@
 * {
    margin: 0 auto;
    padding: 0;
-   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif 
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
